--- a/Bugsnag.WebTest/Views/Home/Index.cshtml
+++ b/Bugsnag.WebTest/Views/Home/Index.cshtml
@@ -5,13 +5,19 @@
 <h2>BugSnag test page</h2>
 
 <h3>Step 1</h3>
-<p>Be sure to look at the global.asax to see what we've added.  Also, check out the web.config -- you'll need to set your API key</p>
+<p>Be sure to look at the global.asax to see what we've added.  Also, check out the web.config -- <strong>you'll need to set your API key</strong>.  Then, refresh this page</p>
 
-<h3>Step 2</h3>
-<a href="/home/throwexception">Press to throw an exception</a>
+@if(ViewBag.APIKeySet == true)
+{
+    <h3>Step 2</h3>
+    <a href="/home/throwexception">Press to throw an exception</a>
 
-<h3>Step 3</h3>
-<a href="http://bugsnag.com" target="_blank">Visit BugSnag</a> - Your exception should have been logged
+    <h3>Step 3</h3>
+    <p>
+        <a href="http://bugsnag.com" target="_blank">Visit BugSnag Your exception should have been logged</a>
+    </p>
+}
+
 
 
 
